--- a/views/robots/show.ejs
+++ b/views/robots/show.ejs
@@ -6,8 +6,9 @@
   </head>
   <body>
     <h1><%= title %></h1>
+       
 
-    <p><%= robot.name %> - <%= robot.description %></p>
+    <p><%= robot.name %> - <%= robot.description %> - <%= robot.in_stock%> </p>
 
   </body>
 </html>
